src/compiling_error.txt
In file included from /Users/luke/Programming/C++/bts/src/bts-new.cpp:5:
In file included from /Users/luke/Programming/C++/bts/src/lib/btsFS.h:3:
/Users/luke/Programming/C++/bts/src/lib/btsFS.cpp:55:42: warning: in-class initialization of non-static data member is a C++11 extension [-Wc++11-extensions]
         const string configFileLocation = ".bts/bts.config";
                                         ^
/Users/luke/Programming/C++/bts/src/bts-new.cpp:59:6: error: no matching function for call to 'system'
     system(deleteTemporaryDescriptionFile);
     ^~~~~~
/usr/include/stdlib.h:177:6: note: candidate function not viable: no known conversion from 'string' (aka 'basic_string<char, char_traits<char>, allocator<char> >') to 'const char *' for 1st argument
int      system(const char *) __DARWIN_ALIAS_C(system) __OSX_AVAILABLE_BUT_DEPRECATED_MSG(__MAC_10_0,__MAC_NA,__IPHONE_2_0,__IPHONE_8_0, "Use posix_spawn APIs instead.");
         ^
1 warning and 1 error generated.
